@startuml diagrama

class Cliente {
    - cpf_cliente: string
    - nome_cliente: string
    - email_cliente: string
    - senha_cliente: string
    - endereco: string
    - contato: string

    + cadastroCliente(): void
    + loginCliente(): Cliente
    + atualizarContaCliente(): void
    + removerContaCliente(): void
    + listarClientes(): string
}

class Gerente {
    - id_gerente: int
    - nome_gerente: string
    - email_gerente: string
    - senha_gerente: string

    + cadastroGerente(): void
    + loginGerente(): Gerente
    + atualizarContaGerente(): void
    + removerContaGerente(): void
}

class Produto {
    - id_produto: int
    - nome_produto: string
    - descricao: string
    - preco: double

    + cadastroProduto(): void
    + atualizarProduto(): void
    + removerProduto(): void
    + listarProdutos(): string
    + buscarProduto(): Produto
}

class Ingrediente {
    - id_ingrediente: int
    - nome_ingrediente: string
    - unidade_medida: string

    + cadastroIngrediente(): void
}

class Pedido{
    - id_pedido: int
    - id_cliente: int
    - valor_total: double

    + fazerPedido(): void
    + listarPedidos(): string
    + listarPedidosPorCliente(): string
    + buscarPedido(): Pedido
}

class PedidoProduto{
    - id_pedido: int
    - id_produto: int
    - quantidade_comprada: int
}

class ProdutoIngrediente{
    - id_produto: int
    - id_ingrediente: int
}

Cliente "1" -- "n" Pedido : faz
Pedido "1" -- "1" PedidoProduto : contém
Produto "1" -- "1" PedidoProduto : é vendido
Produto "1" -- "1" ProdutoIngrediente : contém
Ingrediente "1" -- "1" ProdutoIngrediente : é usado

@enduml